Spotless, test, and animal sniffer.